# energie-delen

./: README.md
simulation/: pyproject.toml
simulation/src/: core_types.py  loader.py
